CHECKPOINT-FREEZE first page, handing code to Vk
* mjw-3:Addup to category save not working

* mjw-4:Add support add update package

* mjw-sp: Added holiday search using JPA specification

* Refactor holiday search implementation and improve criteria handling

* Refactor holiday category handling to use holiday themes and update related mappings

* Refactor holiday search method and update request parameters to be nullable

* Add column type in location for second page main image

* Enhance HolidayMapper and HolidayThemeMapper to utilize LocationMapper and add missing mapping for holidayId

* temorary change for second page

* CHECKPOINT-FREEZE first page, handing code to Vk